--- a/style.css
+++ b/style.css
@@ -101,6 +101,9 @@
 .icon-th:before {
   content: "\f00a";
 }
+.icon-th-list:before {
+  content: "\f00b";
+}
 .icon-check:before {
   content: "\f00c";
 }
